--- a/product-page.html
+++ b/product-page.html
@@ -274,26 +274,71 @@
 
                                 <a href="#" class="greenbtn">Add to cart</a>
                             </div>
-                            <div class="productinfo__deliveryinfo">
-                                <p>
-                                    <span class="imgwrap">
-                                        <img src="img/product/delivery-truck.svg" alt="img">
-                                    </span>
-                                    Free shipping, <b>arrives by tomorrow</b> to <u>Sacramento, 95829</u>
+
+                            <!-- upd1 -->
+                            <div class="productinfo__alergyfree">
+                                <p class="title">
+                                    <img src="img/new/alergyfree.svg" alt="img">
+                                    <span>Allergy-free:</span>
                                 </p>
-                                <p>
-                                    <span class="imgwrap">
-                                        <img src="img/product/delivery-truck2.svg" alt="img">
-                                    </span>
-                                    Or faster delivery <b>tomorrow, May 17</b>. Order within <span>9 h 48 min</span>.
-                                </p>
-                                <p>
-                                    <span class="imgwrap">
-                                        <img src="img/product/turn-back.svg" alt="img">
-                                    </span>
-                                    <b>Free 90-day returns</b>
-                                </p>
+                                <div class="categorysect__discounts">
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic1.svg" alt="img">
+                                        </div>
+                                        <p>Chocolate-free</p>
+                                    </div>
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic2.svg" alt="img">
+                                        </div>
+                                        <p>Gluten-free</p>
+                                    </div>
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic3.svg" alt="img">
+                                        </div>
+                                        <p>Low Card</p>
+                                    </div>
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic4.svg" alt="img">
+                                        </div>
+                                        <p>Low Fat</p>
+                                    </div>
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic5.svg" alt="img">
+                                        </div>
+                                        <p>Low Sodium</p>
+                                    </div>
+                                    <div class="discountbox">
+                                        <div class="discountbox__circle">
+                                            <img src="img/new/discount-ic6.svg" alt="img">
+                                        </div>
+                                        <p>Dairy Free</p>
+                                    </div>
+                                </div>
                             </div>
+                            <div class="certificates">
+                                <div class="certificatebox">
+                                    <img src="img/new/certificate1.png" alt="Certificate image">
+                                    <span>Kosher Certificates: <i>Name 1</i></span>
+                                </div>
+                                <div class="certificatebox">
+                                    <img src="img/new/certificate2.png" alt="Certificate image">
+                                    <span>Kosher Certificates: <i>Name 2</i></span>
+                                </div>
+                                <div class="certificatebox">
+                                    <img src="img/new/certificate1.png" alt="Certificate image">
+                                    <span>Kosher Certificates: <i>Name 3</i></span>
+                                </div>
+                                <div class="certificatebox">
+                                    <img src="img/new/certificate1.png" alt="Certificate image">
+                                    <span>Kosher Certificates: <i>Name 4</i></span>
+                                </div>
+                            </div>
+                            <!-- - -->
                         </div>
                     </div>
                 </div>
@@ -474,12 +519,12 @@
             </div>
         </section>
 
-        <section class="product-description">
+        <section class="product-description productinformation">
             <div class="container">
                 <div class="prinfobox">
-                    <p class="greytitle">
+                    <!-- <p class="greytitle">
                         Product description
-                    </p>
+                    </p> -->
                     <div class="prinfobox__body">
                         <div class="row">
                             <div class="col-lg-7">
@@ -539,70 +584,22 @@
                             <div class="col-lg-5">
                                 <div class="rightsect">
                                     <div class="supplementfacts">
-                                        <p class="title">Supplement Facts</p>
-                                        <div class="descr">
-                                            <p><b>Serving Size:</b> 1/2 Cup Mix (55 g)</p>
-                                            <p><b>Servings Per Container:</b> 6</p>
-                                        </div>
+                                        <p class="title">Storage Conditions</p>
+                                        <p>
+                                            <b>Frozen:</b> This product is a frozen product and will be coming packed in
+                                            ice.
+                                        </p>
+                                        <p>
+                                            <b>Shalf Live:</b> 6 messi.
+                                        </p>
+                                        <p class="note">
+                                            <span>*PLEASE NOTE:</span> Ess Gezunt is not responsible for any manufacturer claim
+                                            including allergens, kosher status, or any other special ingredients. Ess
+                                            Gezunt suggests that manufacturers post all health features as well as
+                                            kosher certifications
+                                        </p>
                                     </div>
-                                    <div class="supplementtable">
-                                        <div class="supplementtable__header">
-                                            <p class="amountperserving">
-                                                Amount Per Serving
-                                            </p>
-                                            <p class="dailyval">
-                                                % Daily Value*
-                                            </p>
-                                        </div>
-                                        <div class="supplementtable__body">
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Calories</p>
-                                                <p class="amountperserving">210</p>
-                                                <p class="dailyval"></p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Total Fat</p>
-                                                <p class="amountperserving">4 g</p>
-                                                <p class="dailyval">5%</p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Saturated Fat</p>
-                                                <p class="amountperserving">0 g</p>
-                                                <p class="dailyval">5%</p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Trans Fat</p>
-                                                <p class="amountperserving">30 mg</p>
-                                                <p class="dailyval"></p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Cholesterol</p>
-                                                <p class="amountperserving">360 mg</p>
-                                                <p class="dailyval">10%</p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Sodium</p>
-                                                <p class="amountperserving">24 g</p>
-                                                <p class="dailyval">16%</p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Total Carbohydrate</p>
-                                                <p class="amountperserving">5 g</p>
-                                                <p class="dailyval">9%</p>
-                                            </div>
-                                            <div class="supplementtable__row">
-                                                <p class="supplementtable__title">Dietary Fiber</p>
-                                                <p class="amountperserving">7 g</p>
-                                                <p class="dailyval">0%</p>
-                                            </div>
 
-                                            <p class="supplementtable__botttext">
-                                                *The % Daily Value tells you how much a nutrient in a serving of food
-                                                contributes to a daily diet. 2,000 calories a day is used for general
-                                                nutrition advice.
-                                            </p>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
