--- a/sitemap.html
+++ b/sitemap.html
@@ -17,9 +17,12 @@
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
                 <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
-
-
-
+                <li><a target="_blank" href="category-page.html">Category page</a></li>
+                <li><a target="_blank" href="product-page.html">Product page</a></li>
+                <li><a target="_blank" href="product-page-another-storage-conditions.html">Product page (another storage conditions)</a></li>
+                <li><a target="_blank" href="seller-acc-product-list-addproduct.html">Seller Account / Product list - Add Product</a></li>
+                
+                
                 <!-- <li><a target="_blank" href="index.html">Main</a></li>
                 <li><a target="_blank" href="my-account-personal-info.html">My Account - Personal Info</a></li>
                 <br>
