--- a/category-page.html
+++ b/category-page.html
@@ -135,7 +135,7 @@
                         <source srcset="img/category/catpageimg-mob.png" media="(max-width: 575px)">
                         <img src="img/category/catpageimg.jpg" alt="img">
                     </picture>
-                    
+
 
                     <!-- catpageimg-mob -->
                     <h1>Product for special</h1>
@@ -168,50 +168,107 @@
                         </select>
                     </div>
 
-                    
+
                 </div>
-                <div class="categorysect__discounts">
-                    <a href="#">
-                        <div class="discountbox">
-                            <div class="discountbox__circle">
-                                <img src="img/category/discount-ic1.svg" alt="">
-                            </div>
-                            <p>Gift sets</p>
+
+                <form action="#">
+                    <div class="categorysect__discounts">
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="1">
+                            <label for="1" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic1.svg" alt="img">
+                                </div>
+                                <p>Chocolate-free</p>
+                            </label>
                         </div>
-                    </a>
-                    <a href="#">
-                        <div class="discountbox">
-                            <div class="discountbox__circle">
-                                <img src="img/category/discount-ic2.svg" alt="">
-                            </div>
-                            <p>Gluten Free</p>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="2">
+                            <label for="2" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic2.svg" alt="img">
+                                </div>
+                                <p>Gluten-free</p>
+                            </label>
                         </div>
-                    </a>
-                    <a href="#">
-                        <div class="discountbox">
-                            <div class="discountbox__circle">
-                                <p>-15%</p>
-                            </div>
-                            <p>Sale -15%</p>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="3">
+                            <label for="3" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic3.svg" alt="img">
+                                </div>
+                                <p>Low Card</p>
+                            </label>
                         </div>
-                    </a>
-                    <a href="#">
-                        <div class="discountbox">
-                            <div class="discountbox__circle">
-                                <p>-20%</p>
-                            </div>
-                            <p>Sale -20%</p>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="4">
+                            <label for="4" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic4.svg" alt="img">
+                                </div>
+                                <p>Low Fat</p>
+                            </label>
                         </div>
-                    </a>
-                    <a href="#">
-                        <div class="discountbox">
-                            <div class="discountbox__circle">
-                                <p>-30%</p>
-                            </div>
-                            <p>Sale -30%</p>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="5">
+                            <label for="5" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic5.svg" alt="img">
+                                </div>
+                                <p>Low Sodium</p>
+                            </label>
                         </div>
-                    </a>
-                </div>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="6">
+                            <label for="6" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic6.svg" alt="img">
+                                </div>
+                                <p>Dairy Free</p>
+                            </label>
+                        </div>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="7">
+                            <label for="7" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic7.svg" alt="img">
+                                </div>
+                                <p>New</p>
+                            </label>
+                        </div>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="8">
+                            <label for="8" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic8.svg" alt="img">
+                                </div>
+                                <p>Nuts free</p>
+                            </label>
+                        </div>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="9">
+                            <label for="9" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic9.svg" alt="img">
+                                </div>
+                                <p>Peantus free</p>
+                            </label>
+                        </div>
+                        <div class="catdiscounts__box">
+                            <input type="checkbox" id="10">
+                            <label for="10" class="discountbox">
+                                <div class="discountbox__circle">
+                                    <img src="img/new/discount-ic10.svg" alt="img">
+                                </div>
+                                <p>Sugar free</p>
+                            </label>
+                        </div>
+                    </div>
+                </form>
+
+
+
+
                 <div class="categorysect__body">
 
                     <div class="categorysect__filter">
@@ -738,10 +795,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </main>
 
     <footer class="footer">
