--- a/seller-acc-product-list-addproduct.html
+++ b/seller-acc-product-list-addproduct.html
@@ -323,7 +323,36 @@
                                                                 data-bs-toggle="tooltip"
                                                                 data-bs-title="Default tooltip">
                                                         </p>
-                                                        
+                                                        <div class="addkoshercertificate">
+                                                            <div class="ingrwrap" id="certificateContainer">
+                                                                <div class="addedsertificate">
+                                                                    <div class="addedsertificate__file">
+                                                                        <div class="file-upload">
+                                                                            <div class="file-select">
+                                                                                <label for="chooseFile1">
+                                                                                    <div class="file-select-button"
+                                                                                        id="fileName1"><img
+                                                                                            src="img/blog/photo-ic.svg"
+                                                                                            alt="icon">Add icon</div>
+                                                                                </label>
+                                                                                <input type="file" name="chooseFile1"
+                                                                                    id="chooseFile1" class="chooseFile">
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="addedsertificate__img">
+                                                                        <img class="selectedImage" src="" alt="">
+                                                                    </div>
+                                                                    <div class="addedsertificate__text">
+                                                                        <input type="text">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="addingr">
+                                                                <span class="addbtn" id="addCertificate">Add Certificate
+                                                                    +</span>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
 
@@ -484,47 +513,6 @@
                                                     <div class="addingr">
                                                         <span class="addbtn">Add Tag +</span>
                                                     </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="formbox">
-                                            <p class="titleinfo">FAQs
-                                                <img src="img/selleracc/question-icon.svg" alt="question"
-                                                    data-bs-toggle="tooltip" data-bs-title="Default tooltip">
-                                            </p>
-                                            <div class="faqquestions">
-                                                <div class="addqboxes">
-                                                    <div class="addqbox">
-                                                        <div class="row">
-                                                            <div class="col-xl-8">
-                                                                <div class="inputfield">
-                                                                    <input type="text" id="posname"
-                                                                        placeholder="Musclefit Protein Pancake Prepared Fast easy..."
-                                                                        required="">
-                                                                    <label for="posname">Question
-                                                                        <img src="img/selleracc/question-icon.svg"
-                                                                            alt="question" data-bs-toggle="tooltip"
-                                                                            data-bs-title="Default tooltip">
-                                                                    </label>
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-lg-12">
-                                                                <div class="inputfield">
-                                                                    <textarea
-                                                                        placeholder="This description will be located after the title and price. For example: Etiam non nunc vehicula, facilisis nunc vitae, tristique leo. Suspendisse lectus justo, commodo ut dapibus nec, aliquam vitae nulla. Maecenas "></textarea>
-                                                                    <label for="posname">Answer
-                                                                        <img src="img/selleracc/question-icon.svg"
-                                                                            alt="question" data-bs-toggle="tooltip"
-                                                                            data-bs-title="Default tooltip">
-                                                                    </label>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="addingr">
-                                                    <span class="addbtn">Add FAQ +</span>
                                                 </div>
                                             </div>
                                         </div>
