--- a/product-page.html
+++ b/product-page.html
@@ -235,22 +235,7 @@
                                 Musclefit Pancake Proteico Preparato Fast facile e veloce 250g per la tua colazione Fit
                                 (Original)
                             </h1>
-                            <div class="sellratbox">
-                                <div class="seller">
-                                    <img src="img/product/avatar.svg" alt="avatar">
-                                    <p>Seller: <span>Ecovent</span></p>
-                                </div>
-                                <div class="ratingresponse">
-                                    <div class="stars">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star.svg" alt="">
-                                        <img src="img/category/star-emp.svg" alt="">
-                                    </div>
-                                    <span>(22 response)</span>
-                                </div>
-                            </div>
+                            <p class="productcode"><span>Cod:</span> 88-5268 lk</p>
                             <p class="productinfo__price">
                                 $ 20.99
                             </p>
@@ -273,6 +258,22 @@
 
 
                                 <a href="#" class="greenbtn">Add to cart</a>
+                            </div>
+                            <div class="sellratbox">
+                                <div class="seller">
+                                    <img src="img/product/avatar.svg" alt="avatar">
+                                    <p>Seller: <span>Ecovent</span></p>
+                                </div>
+                                <div class="ratingresponse">
+                                    <div class="stars">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star.svg" alt="">
+                                        <img src="img/category/star-emp.svg" alt="">
+                                    </div>
+                                    <span>(22 response)</span>
+                                </div>
                             </div>
 
                             <!-- upd1 -->
@@ -593,7 +594,8 @@
                                             <b>Shalf Live:</b> 6 messi.
                                         </p>
                                         <p class="note">
-                                            <span>*PLEASE NOTE:</span> Ess Gezunt is not responsible for any manufacturer claim
+                                            <span>*PLEASE NOTE:</span> Ess Gezunt is not responsible for any
+                                            manufacturer claim
                                             including allergens, kosher status, or any other special ingredients. Ess
                                             Gezunt suggests that manufacturers post all health features as well as
                                             kosher certifications
@@ -1021,7 +1023,7 @@
             </div>
         </section>
 
-
+        
     </main>
 
     <footer class="footer">
