--- a/seller-acc-product-list.html
+++ b/seller-acc-product-list.html
@@ -178,7 +178,8 @@
                                         <a href="#">At a discount</a>
                                         <a href="#">Hidden</a>
                                     </div>
-                                    <!-- <div class="recentorder-filter recentorder-filter__seller">
+
+                                    <div class="recentorder-filter recentorder-filter__prodlist">
                                         <div class="leftsect">
                                             <div class="generalselect">
                                                 <select class="customselect" name="Filter">
@@ -195,7 +196,8 @@
                                                 <button><img src="img/header/search-icon.svg" alt="search"></button>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
+
                                     <div class="prodlist-selectbox">
                                         <p>Select: 0</p>
                                         <div class="prodlist-selectboxbtn">
@@ -213,7 +215,7 @@
                                     </div>
 
                                     <div class="datatablewrapper sellertable">
-                                        <table id="example" class="table datatable">
+                                        <table id="example1" class="table datatable">
                                             <thead>
                                                 <tr>
                                                     <th>
@@ -223,7 +225,7 @@
                                                         </div>
                                                     </th>
                                                     <th>Name</th>
-                                                    <th>Date</th>
+                                                    <th>SKU</th>
                                                     <th>Code</th>
                                                     <th>Display</th>
                                                     <th>Price</th>
@@ -261,13 +263,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.28.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        ZG011AQA
                                                     </td>
                                                     <td class="code">456704</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 20.99
                                                         <span>$ 22.10</span>
@@ -296,13 +303,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.22.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        EF341ADE
                                                     </td>
                                                     <td class="code">456702</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 12.32
                                                     </td>
@@ -330,13 +342,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.28.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        ZG011AQA
                                                     </td>
                                                     <td class="code">456701</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 18.22
                                                     </td>
@@ -364,13 +381,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.28.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        ZG011AQA
                                                     </td>
                                                     <td class="code">456700</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 17.00
                                                     </td>
@@ -398,13 +420,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.28.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        ZG011AQA
                                                     </td>
                                                     <td class="code">456699</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 20.99
                                                     </td>
@@ -432,13 +459,18 @@
                                                             </div>
                                                         </div>
                                                     </td>
-                                                    <td class="date">
-                                                        <span>05.28.23</span>
-                                                        <button class="editdate"><img src="img/selleracc/edit.svg"
-                                                                alt="edit"></button>
+                                                    <td class="skutd">
+                                                        ZG011AQA
                                                     </td>
                                                     <td class="code">456702</td>
-                                                    <td class="display">Published</td>
+                                                    <td class="display">
+                                                        <p class="publishedinfo">Published</p>
+                                                        <div class="date">
+                                                            <span>05.28.23</span>
+                                                            <button class="editdate"><img src="img/selleracc/edit.svg"
+                                                                    alt="edit"></button>
+                                                        </div>
+                                                    </td>
                                                     <td class="price">
                                                         $ 11.22
                                                     </td>
@@ -448,11 +480,8 @@
                                             </tbody>
                                         </table>
                                     </div>
-
-
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
